<resources>
	<string name="app_name">Pocket Schedule</string>
	<integer name="com_vk_sdk_AppId">7810833</integer>
	
	<string name="unknown_error_try_again">Произошла ошибка\nПопробуйте еще раз</string>
	<string name="authorization">Авторизация</string>
	<string name="choose_your_university">Выбери свой вуз</string>
	<string name="choose_your_schedule_user">Кто вы?</string>
	<string name="university_choosing">Выбор ВУЗа</string>
	<string name="user_choosing">Выбор пользователя</string>
	<string name="how_to_login_without">А как входить без логина и пароля?</string>
	<string name="login_required">Нужно ввести логин</string>
	<string name="password_required">Нужно ввести пароль</string>
	<string name="validation_error">Ошибка авторизации\nВозможно, логин или пароль неверны</string>
	<string name="server_error">Ошибка сервера\nПожалуйста, повторите попытку позднее</string>
	<string name="choose_your_group">Выбери свою группу</string>
	<string name="or">Или</string>
	<string name="login_via_VK">Авторизация через ВК</string>
	<string name="login_as_noun">Логин</string>
	<string name="password">Пароль</string>
	<string name="login_as_verb">Войти</string>
	<string name="error_no_university_selected">Выберите свой вуз</string>
	<string name="error_no_schedule_user_selected">Выберите своего пользователя</string>
	<string name="error_nothing_selected">Вы же ничего не выбрали)</string>
	<string name="schedule">Расписание</string>
	<string name="news">Новости</string>
	<string name="deadlines">Дедлайны</string>
	<string name="today">Сегодня</string>
	<string name="even"> Чётная </string>
	<string name="odd">Нечётная</string>
	<string name="save">Сохранить</string>
	<string name="you_can_sleep_in_peace">Можно спать спокойно!</string>
	<string name="comma_there_is_no_lessons">, пар нет!</string>
	<string name="there_is_no_lessons">Пар нет!</string>
	<string name="search_with_ellipsis">Поиск…</string>
	<string name="groups">Группы</string>
	<string name="professors">Преподаватели</string>
	<string name="without_professor">Без преподавателя</string>
	<string name="without_subject">Без предмета</string>
	<string name="without_name">Без имени</string>
	<string name="empty_time">xx:xx</string>
	<string name="expired">Просроченные</string>
	<string name="closed">Закрытые</string>
	<string name="opened">Открытые</string>
	<string name="all">Все</string>
	<string name="deadline_empty_item_title">Заданий пока нет!</string>
	<string name="deadline_empty_item_opened">Ты выполнил все дедлайны!\nЭто достойно уважения!</string>
	<string name="deadline_empty_item_expired">Ты выполнил все просроченные дедлайны!\nОтдохни немного и берись за остальные!</string>
	<string name="deadline_empty_item_closed">Ты выполнил вообще все дедлайны!\nМы тобой восхищаемся!</string>
	<string name="deadline_empty_item_external">Это дедлайны твоего учебного заведения,\nи здесь пока пусто.\nС чем тебя и поздравляем!</string>
	<string name="loading..">Консультируемся с деканатом..</string>
	<string name="type">Тип</string>
	<string name="deadline_description">Описание дедлайна</string>
	<string name="deadline_title">Название дедлайна</string>
	<string name="subject">Предмет</string>
	<string name="points">Баллы</string>
	<string name="deadline_date">Дата дедлайна</string>
	<string name="deadline_card">Карточка дедлайна</string>
	<string name="close_deadline">Закрыть дедлайн</string>
	<string name="open_deadline">Открыть дедлайн</string>
	<string name="update_deadline">Обновить дедлайн</string>
	<string name="create_deadline">Создать дедлайн</string>
	<string name="edit">Редактировать</string>
	<string name="delete">Удалить</string>
	<string name="delete_question">Удалить?</string>
	<string name="optional_with_brackets">(необязательно)</string>
	<string name="required">необходимо</string>
	<string name="choose_date">выберите дату</string>
	<string name="choose_subject">выберите тему</string>
	<string name="enter_title">введите название</string>
	<string name="enter_description">введите описание</string>
	<string name="app_name_first_line">Sched</string>
	<string name="app_name_second_line">App</string>
	<string name="welcome">Добро пожаловать!</string>
	<string name="onboarding_first_description">Свайпай влево, чтобы узнать особенности сервиса</string>
	<string name="onboarding_second_description">Будь в курсе всех событий своего университета и секций</string>
	<string name="guap">ГУАП</string>
	<string name="onboarding_second_example_date">1 сентября в 12:30</string>
	<string name="onboarding_second_example_title">К нам в группу ежедневно поступает множество вопросов.</string>
	<string name="onboarding_second_example_description">Кто сможет ответить на них максимально внятно и объемно? Правильно. Ректор ГУАП в пятницу собирает пресс-конференцию для избранных, коими вы не являетесь.</string>
	<string name="onboarding_third_description">Контролируй учебный процесс, ставь задачи и выполняй их в срок</string>
	<string name="onboarding_third_example_title_one">Сделать лабораторную №1</string>
	<string name="onboarding_third_example_description_one">Математический анализ</string>
	<string name="onboarding_third_example_title_two">Срочно скинуть ДЗ!</string>
	<string name="onboarding_third_example_description_two">Операционные системы</string>
	<string name="onboarding_third_example_title_three">Домашка по кванторам</string>
	<string name="onboarding_third_example_description_three">Формальная семантика</string>
	<string name="onboarding_fourth_description">Смотри расписание преподавателй и групп в реальном времени</string>
	<string name="onboarding_fourth_example_description_one">Семененко Т.В. — старший преподаватель</string>
	<string name="onboarding_fourth_example_description_two">Жуков А.Д. — доцент, канд. техн. наук, доцент</string>
	<string name="onboarding_fourth_example_description_three">Черепков Е.В. — доцент, канд. экон. наук</string>
	<string name="onboarding_fourth_example_title_one">Архитектура ЭВМ</string>
	<string name="onboarding_fourth_example_title_two">Основы теории управления</string>
	<string name="onboarding_fourth_example_title_three">Технико-экономическое обоснование проектных решений</string>
	<string name="onboarding_fourth_example_address_one">Б.М 67; 14–28</string>
	<string name="onboarding_fourth_example_address_two">Б.М 67; 32–03</string>
	<string name="onboarding_fourth_example_address_three">Московский 149; 410</string>
	<string name="laboratory_work">Лабораторная работа</string>
	<string name="practice_work">Практическая работа</string>
	<string name="lecture">Лекция</string>
	<string name="three_groups">3 группы</string>
	<string name="two_deadlines_emoji">2🔥</string>
	<string name="onboarding_fifth_title">Начнем?</string>
	<string name="onboarding_fifth_description">Авторизуйся и получи возможность воспользоваться полным функционалом приложения</string>
	<string name="authorize">Авторизоваться</string>
	<string name="continue_without_registration">Продолжить без регистрации</string>
	<string name="students_card">Карточка студента</string>
	<string name="settings">Настройки</string>
	<string name="save_data">Сохранить данные</string>
	<string name="general_settings">Основные настройки</string>
	<string name="about_app">О приложении</string>
	<string name="university">ВУЗ</string>
	<string name="group">Группа</string>
	<string name="start_screen">Начальный экран</string>
	<string name="designed_by">Designed by Vadim Kokorev</string>
	<string name="developed_by">Developed by Denis Shishkin</string>
	<string name="inspired_by">Inspired by Kirill Kovalev</string>
	<string name="please_log_in">Пожалуйста, авторизуйтесь!</string>
	<string name="you_will_be_able_to">Благодаря этому вы сможете:</string>
	<string name="vk_auth_unsuccessful">Авторизация через VK неуспешна</string>
	<string name="oops">Упс…</string>
	<string name="re_authentication_required">Требуется повторить вход</string>
	<string name="auth_requirement_example_first">Быть в курсе всех\nсобытий университета\nи секций</string>
	<string name="auth_requirement_example_second">Контролировать учебный\nпроцесс, ставить задачи\nи выполнять их в срок</string>
	<string name="auth_requirement_example_third">Смотреть расписание\nпреподавателей и групп\nв реальном времени</string>
	<string name="auth_requirement_example_fourth">Находить всю важную\nинформацию об\nуниверситете и не только</string>
	<string name="outdated_app">Текущая версия приложения устарела,\nобновите приложение</string>
	<string name="go_to_google_play">Перейти в Google Play</string>
	<string name="an_error_has_occurred_try_again">Произошла ошибка, попробуйте еще раз</string>
	<string name="some_items_not_loaded">Некоторые элементы не были загружены.\nРекомендуется свериться с сервисом учебного заведения.</string>
	<string name="mon">Пн</string>
	<string name="tue">Вт</string>
	<string name="wed">Ср</string>
	<string name="thu">Чт</string>
	<string name="fri">Пт</string>
	<string name="sat">Сб</string>
	<string name="monday">Понедельник</string>
	<string name="tuesday">Вторник</string>
	<string name="wednesday">Среда</string>
	<string name="thursday">Четверг</string>
	<string name="friday">Пятница</string>
	<string name="saturday">Суббота</string>
	<string name="off_the_grid">Вне сетки</string>
	<string name="password_dummy">••••••••</string>
	<string name="subject_choosing">Выбор предмета</string>
	<string name="coming_soon">Раздел тестируется, ждите обновления :)</string>
	<string name="version">Версия&#160;</string>
	<string name="leave_feedback_with_link"><a href="https://t.me/i5pft">Оставить отзыв</a></string>
	<string name="privacy_policy_with_link"><a href="https://q2ve.github.io/Pocket_Schedule_legal/">Политика конфиденциальности</a></string>
	
</resources>