<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:background="@color/colorBlackTranslucent"
	android:clickable="true"
	android:focusable="true">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingTop="15dp"
		android:paddingBottom="40dp"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:background="@drawable/rc_20dp">

		<ImageView
			android:id="@+id/authorization_requirement_back_button"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_marginEnd="10dp"
			android:padding="5dp"
			android:layout_gravity="end"
			android:src="@drawable/ic_cancel_cross_outline"
			app:tint="@color/colorLightGray2"
			android:visibility="invisible"/>

		<ImageView
			android:layout_width="77dp"
			android:layout_height="77dp"
			android:src="@drawable/ic_user_encircled"
			app:tint="@color/colorBlue" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="22dp"
			android:layout_marginHorizontal="25dp"
			android:text="@string/please_log_in"
			android:textSize="21sp"
			android:textColor="@color/colorBlack"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="22dp"
			android:layout_marginHorizontal="25dp"
			android:text="@string/you_will_be_able_to"
			android:textSize="14sp"
			android:textColor="@color/colorBlack"
			android:textStyle="bold"/>

		<LinearLayout
			android:layout_width="210dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="18dp"
			android:layout_marginHorizontal="12dp"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_academic_cap"
				app:tint="@color/colorBlue" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="14dp"
				android:textSize="14sp"
				android:textColor="@color/colorLightGray1"
				android:text="@string/auth_requirement_example_first"/>

		</LinearLayout>


		<LinearLayout
			android:layout_width="210dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="22dp"
			android:layout_marginHorizontal="12dp"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_recent"
				app:tint="@color/colorBlue" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="14dp"
				android:text="@string/auth_requirement_example_second"
				android:textColor="@color/colorLightGray1"
				android:textSize="14sp" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="210dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="22dp"
			android:layout_marginHorizontal="12dp"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_schedule"
				android:scaleX="1.4"
				android:scaleY="1.4"
				app:tint="@color/colorBlue" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="14dp"
				android:textSize="14sp"
				android:textColor="@color/colorLightGray1"
				android:text="@string/auth_requirement_example_third"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="210dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="22dp"
			android:layout_marginHorizontal="12dp"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_news"
				android:scaleX="1.4"
				android:scaleY="1.4"
				app:tint="@color/colorBlue" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="14dp"
				android:textSize="14sp"
				android:textColor="@color/colorLightGray1"
				android:text="@string/auth_requirement_example_fourth"/>

		</LinearLayout>

		<TextView
			android:id="@+id/authorization_requirement_enter_button"
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:layout_marginTop="22dp"
			android:layout_marginHorizontal="40dp"
			android:background="@drawable/rc_textfield"
			android:backgroundTint="@color/colorBlue"
			android:gravity="center"
			android:text="@string/authorize"
			android:textColor="@color/colorWhite"
			android:textSize="15sp"
			android:textStyle="bold" />

	</LinearLayout>

</LinearLayout>