<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginHorizontal="12dp"
	android:layout_marginTop="16dp"
	android:scrollbars="none"
	android:overScrollMode="never"
	android:background="@color/colorPlaqueBackground"
	tools:ignore="UseCompoundDrawables">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="30dp"
		android:orientation="vertical"
		android:focusableInTouchMode="true"
		android:clickable="true"
		android:focusable="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_article"
				android:layout_marginEnd="10dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:lines="1"
				android:ellipsize="end"
				android:text="@string/deadline_title"
				android:textStyle="bold"
				android:textSize="15sp"
				android:textColor="@color/colorBlack" />

			<TextView
				android:id="@+id/core_deadlines_card_editable_title_required_mark"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:maxLines="1"
				android:lines="1"
				android:ellipsize="end"
				android:text="@string/required"
				android:textSize="15sp"
				android:textColor="@color/colorRedMain"
				android:visibility="invisible" />

		</LinearLayout>

		<EditText
			android:id="@+id/core_deadlines_card_editable_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="40dp"
			android:layout_marginTop="10dp"
			android:paddingVertical="6dp"
			android:paddingHorizontal="12dp"
			android:background="@drawable/rc_textfield"
			android:gravity="center_vertical"
			android:inputType="text"
			android:ellipsize="end"
			android:textSize="15sp"
			android:textColor="@color/colorBlack"
			android:hint="@string/enter_title"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="14dp"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_article_outline"
				android:layout_marginEnd="10dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:lines="1"
				android:ellipsize="end"
				android:text="@string/deadline_description"
				android:textStyle="bold"
				android:textSize="15sp"
				android:textColor="@color/colorBlack"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="6dp"
				android:maxLines="1"
				android:lines="1"
				android:ellipsize="end"
				android:text="@string/optional_with_brackets"
				android:textSize="15sp"
				android:textColor="@color/colorLightGray1"/>

		</LinearLayout>

		<EditText
			android:id="@+id/core_deadlines_card_editable_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="40dp"
			android:layout_marginTop="10dp"
			android:paddingVertical="6dp"
			android:paddingHorizontal="12dp"
			android:background="@drawable/rc_textfield"
			android:gravity="center_vertical"
			android:inputType="text"
			android:ellipsize="end"
			android:textSize="15sp"
			android:textColor="@color/colorBlack"
			android:hint="@string/enter_description"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="14dp"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_schedule"
				android:scaleY="1.4"
				android:scaleX="1.4"
				android:translationY="1dp"
				android:layout_marginEnd="10dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:lines="1"
				android:ellipsize="end"
				android:text="@string/deadline_date"
				android:textStyle="bold"
				android:textSize="15sp"
				android:textColor="@color/colorBlack"/>

			<TextView
				android:id="@+id/core_deadlines_card_editable_date_required_mark"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:maxLines="1"
				android:lines="1"
				android:ellipsize="end"
				android:text="@string/required"
				android:textSize="15sp"
				android:textColor="@color/colorRedMain"
				android:visibility="invisible" />

		</LinearLayout>

		<TextView
			android:id="@+id/core_deadlines_card_editable_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="40dp"
			android:layout_marginTop="10dp"
			android:paddingVertical="6dp"
			android:paddingHorizontal="12dp"
			android:background="@drawable/rc_textfield"
			android:gravity="center_vertical"
			android:ellipsize="end"
			android:textSize="15sp"
			android:textColor="@color/colorBlack"
			android:hint="@string/choose_date"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="14dp"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<ImageView
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_academic_cap"
				android:layout_marginEnd="10dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:lines="1"
				android:ellipsize="end"
				android:text="@string/subject"
				android:textStyle="bold"
				android:textSize="15sp"
				android:textColor="@color/colorBlack"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="6dp"
				android:maxLines="1"
				android:lines="1"
				android:ellipsize="end"
				android:text="@string/optional_with_brackets"
				android:textSize="15sp"
				android:textColor="@color/colorLightGray1"/>

		</LinearLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp">

			<TextView
				android:id="@+id/core_deadlines_card_editable_subject"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:minHeight="40dp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:paddingVertical="6dp"
				android:paddingHorizontal="12dp"
				android:background="@drawable/rc_textfield"
				android:gravity="center_vertical"
				android:ellipsize="end"
				android:textSize="15sp"
				android:textColor="@color/colorBlack"
				android:hint="@string/choose_subject"/>

			<ImageView
				android:id="@+id/login_first_university_selector_button"
				android:layout_width="22dp"
				android:layout_height="22dp"
				android:layout_marginEnd="15dp"
				android:rotation="270"
				android:src="@drawable/ic_back_arrow"
				app:layout_constraintTop_toTopOf="@+id/core_deadlines_card_editable_subject"
				app:layout_constraintBottom_toBottomOf="@+id/core_deadlines_card_editable_subject"
				app:layout_constraintEnd_toEndOf="@+id/core_deadlines_card_editable_subject"
				app:tint="@color/colorLightGray1" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<TextView
			android:id="@+id/core_deadlines_card_editable_button_update"
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:layout_marginTop="16dp"
			android:background="@drawable/rc_deadline_card_button_edit"
			android:gravity="center"
			android:text="@string/update_deadline"
			android:textSize="14sp"
			android:textStyle="bold"
			android:textColor="@color/colorBlue" />

		<TextView
			android:id="@+id/core_deadlines_card_editable_button_update2"
			android:layout_width="0dp"
			android:layout_height="0dp" />
			<!--
			I dunno why but it button doubleclicks.
			If remove it - updateButton will doubleclicks
			-->

	</LinearLayout>

</ScrollView>