<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="20dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:id="@+id/login_onboarding_authorize_button"
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:layout_marginHorizontal="12dp"
			android:background="@drawable/rc_20dp"
			android:backgroundTint="@color/colorBlue"
			android:gravity="center"
			android:text="@string/authorize"
			android:textColor="@color/colorWhite"
			android:textSize="15sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/login_onboarding_no_authorize_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:paddingVertical="10dp"
			android:gravity="center"
			android:text="@string/continue_without_registration"
			android:textColor="@color/colorBlue"
			android:textSize="15sp" />

	</LinearLayout>

	<TextView
		android:id="@+id/login_onboarding_5_textview2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="52dp"
		android:layout_marginBottom="15dp"
		android:text="@string/onboarding_fifth_title"
		android:gravity="center"
		android:textColor="@color/colorBlack"
		android:textSize="21sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/login_onboarding_1_textview1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/login_onboarding_1_textview1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="52dp"
		android:layout_marginBottom="110dp"
		android:text="@string/onboarding_fifth_description"
		android:gravity="center"
		android:textColor="@color/colorLightGray1"
		android:textSize="14sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>