<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:minHeight="80dp"
	android:layout_marginBottom="16dp"
	android:orientation="horizontal">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="wrap_content"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/core_schedule_item_start_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:textSize="15sp"
			android:textStyle="bold"
			android:textColor="@color/colorBlack"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:text="@string/empty_time" />

		<TextView
			android:id="@+id/core_schedule_item_index"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/colorLightGray2"
			android:textSize="15sp"
			app:layout_constraintBottom_toTopOf="@+id/core_schedule_item_end_time"
			app:layout_constraintEnd_toEndOf="@+id/core_schedule_item_start_time"
			app:layout_constraintStart_toStartOf="@+id/core_schedule_item_start_time"
			app:layout_constraintTop_toBottomOf="@+id/core_schedule_item_start_time" />

		<TextView
			android:id="@+id/core_schedule_item_end_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="6dp"
			android:textSize="13sp"
			android:textColor="@color/colorBlack"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="@+id/core_schedule_item_start_time"
			app:layout_constraintStart_toStartOf="parent"
			android:text="@string/empty_time" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<View
		android:layout_width="6dp"
		android:layout_height="match_parent"
		android:layout_marginStart="9dp"
		android:layout_marginEnd="9dp"
		android:background="@drawable/rc_divider"
		android:backgroundTint="@color/colorAqua"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/core_schedule_item_subject"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingEnd="15dp"
			android:paddingStart="0dp"
			android:textSize="15sp"
			android:textStyle="bold"
			android:textColor="@color/colorBlack"
			android:maxLines="2"
			android:ellipsize="end"
			android:text="@string/without_subject" />

		<com.google.android.flexbox.FlexboxLayout
			android:id="@+id/core_schedule_item_tag_box"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:minHeight="26dp"
			app:flexWrap="wrap"/>

		<TextView
			android:id="@+id/core_schedule_item_professor"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingEnd="15dp"
			android:paddingStart="0dp"
			android:textSize="15sp"
			android:textColor="@color/colorLightGray1"
			android:maxLines="1"
			android:ellipsize="end"
			android:text="@string/without_professor" />

	</LinearLayout>

</LinearLayout>